--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </table>
         <footer>
             <p>RetroJaén®</p>
+            <p><a href="https://alexelbueno.github.io/web3/feed.xml"><img src="imagenes/rss.png" width="28" height="28" alt="FeedRSS" /></a> </p>
         </footer>
     </div>
 </body>
