--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         </table>
         <footer>
             <p>RetroJaén®</p>
-            <p><a href="https://alexelbueno.github.io/web3/feed.xml"><img src="imagenes/rss.png" width="28" height="28" alt="FeedRSS" /></a> </p>
+            <p>
+                <a href="https://alexelbueno.github.io/web3/feed.xml"><img src="imagenes/rss.png" width="28" height="28" alt="FeedRSS" /></a>
+                <a href="https://alexelbueno.github.io/web3/atom.xml"><img src="imagenes/atom.png" width="28" height="28" alt="FeedAtom" /></a>
+            </p>
         </footer>
     </div>
 </body>
